@@ -46,6 +46,7 @@ struct msg_parse;
 struct query_info;
 struct regional;
 struct module_env;
+struct iter_env;
 
 /**
  * Cleanup the passed dns message.
@@ -57,10 +58,11 @@ struct module_env;
  *	Used to determine out of bailiwick information.
  * @param regional: where to allocate (new) parts of the message.
  * @param env: module environment with config settings and cache. 
+ * @param ie: iterator module environment data.
  * @return: false if the message is total waste. true if scrubbed with success.
  */
 int scrub_message(ldns_buffer* pkt, struct msg_parse* msg, 
 	struct query_info* qinfo, uint8_t* zonename, struct regional* regional,
-	struct module_env* env);
+	struct module_env* env, struct iter_env* ie);
 
 #endif /* ITERATOR_ITER_SCRUB_H */
